Export Pdf - appended sample html code in index.html and coverted to pdf file

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,227 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- Analyze Answers div -->
+    <div class="MuiGrid-root jss103 MuiGrid-container MuiGrid-spacing-xs-3" id="print">
+      <div id="content1" class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12">
+          <div class="MuiPaper-root MuiCard-root jss114 jss102 MuiPaper-elevation1 MuiPaper-rounded">
+              <div class="MuiCardHeader-root">
+              <div class="MuiCardHeader-content"><span class="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock">Q1: How did you know about opening an account through the Arab National Bank website?</span></div>
+              </div>
+              <hr class="MuiDivider-root">
+              <div class="MuiCardContent-root jss116">
+              <div class="jss117">
+                  <div class="jss140">
+                      <div class="MuiPaper-root MuiTableContainer-root MuiPaper-elevation1 MuiPaper-rounded">
+                          <table class="MuiTable-root jss141" aria-label="report">
+                          <thead class="MuiTableHead-root">
+                              <tr class="MuiTableRow-root MuiTableRow-head">
+                                  <th class="MuiTableCell-root MuiTableCell-head" scope="col">Answer Choices</th>
+                                  <th class="MuiTableCell-root MuiTableCell-head" scope="col" colspan="3">Responses</th>
+                              </tr>
+                          </thead>
+                          <tbody class="MuiTableBody-root">
+                              <tr class="MuiTableRow-root">
+                                  <td class="MuiTableCell-root MuiTableCell-body">Branch</td>
+                                  <td class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight">38%</td>
+                                  <td class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight">8</td>
+                              </tr>
+                              <tr class="MuiTableRow-root">
+                                  <td class="MuiTableCell-root MuiTableCell-body">Friends/Relatives</td>
+                                  <td class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight">29%</td>
+                                  <td class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight">6</td>
+                              </tr>
+                              <tr class="MuiTableRow-root">
+                                  <td class="MuiTableCell-root MuiTableCell-body">ANB website</td>
+                                  <td class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight">19%</td>
+                                  <td class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight">4</td>
+                              </tr>
+                              <tr class="MuiTableRow-root">
+                                  <td class="MuiTableCell-root MuiTableCell-body">Social Media</td>
+                                  <td class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight">10%</td>
+                                  <td class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight">2</td>
+                              </tr>
+                              <tr class="MuiTableRow-root">
+                                  <td class="MuiTableCell-root MuiTableCell-body">Advertising</td>
+                                  <td class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight">5%</td>
+                                  <td class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight">1</td>
+                              </tr>
+                              <tr class="MuiTableRow-root">
+                                  <td class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight" colspan="2">Answered</td>
+                                  <td class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight">21</td>
+                              </tr>
+                              <tr class="MuiTableRow-root">
+                                  <td class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight" colspan="2">Skipped</td>
+                                  <td class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight">0</td>
+                              </tr>
+                          </tbody>
+                          </table>
+                      </div>
+                      <br>
+                      <div id="pie" class="dx-visibility-change-handler">
+                          <svg xmlns="http://www.w3.org/2000/svg" version="1.1" fill="none" stroke="none" stroke-width="0" class="dxc dxc-chart" style="line-height:normal;user-select:none;-moz-user-select:none;-webkit-user-select:none;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);display:block;overflow:hidden;" width="1167" height="400" direction="ltr">
+                          <defs>
+                              <filter id="DevExpress_2" x="-50%" y="-50%" width="200%" height="200%" transform="translate(0,0)">
+                                  <feGaussianBlur in="SourceGraphic" result="gaussianBlurResult" stdDeviation="3"></feGaussianBlur>
+                                  <feOffset in="gaussianBlurResult" result="offsetResult" dx="2" dy="6"></feOffset>
+                                  <feFlood result="floodResult" flood-color="" flood-opacity="0.8"></feFlood>
+                                  <feComposite in="floodResult" in2="offsetResult" operator="in" result="compositeResult"></feComposite>
+                                  <feComposite in="SourceGraphic" in2="compositeResult" operator="over"></feComposite>
+                              </filter>
+                              <clipPath id="DevExpress_3">
+                                  <rect x="0" y="0" width="1167" height="400" transform="translate(0,0)"></rect>
+                              </clipPath>
+                          </defs>
+                          <rect x="0" y="0" width="1167" height="400" transform="translate(0,0)" fill="gray" opacity="0.0001"></rect>
+                          <g class="dxc-background"></g>
+                          <g class="dxc-series-group">
+                              <g class="dxc-series">
+                                  <g class="dxc-markers">
+                                      <path d="M 415.67533 301.73009 A 145.00000 145.00000 0 0 0 664.00000 200.00000 L 606.00000 200.00000 A 87.00000 87.00000 0 0 1 457.00520 261.03806 Z" transform="translate(0,0)" stroke-linejoin="round" fill="#1db2f5" stroke="#ffffff" stroke-width="0"></path>
+                                      <path d="M 443.91180 75.95661 A 145.00000 145.00000 0 0 0 415.67533 301.73009 L 457.00520 261.03806 A 87.00000 87.00000 0 0 1 473.94708 125.57397 Z" transform="translate(0,0)" stroke-linejoin="round" fill="#f5564a" stroke="#ffffff" stroke-width="0"></path>
+                                      <path d="M 605.31979 83.49294 A 145.00000 145.00000 0 0 0 443.91180 75.95661 L 473.94708 125.57397 A 87.00000 87.00000 0 0 1 570.79187 130.09576 Z" transform="translate(0,0)" stroke-linejoin="round" fill="#97c95c" stroke="#ffffff" stroke-width="0"></path>
+                                      <path d="M 657.04190 155.62170 A 145.00000 145.00000 0 0 0 605.31979 83.49294 L 570.79187 130.09576 A 87.00000 87.00000 0 0 1 601.82514 173.37302 Z" transform="translate(0,0)" stroke-linejoin="round" fill="#ffc720" stroke="#ffffff" stroke-width="0"></path>
+                                      <path d="M 664.00000 200.00000 A 145.00000 145.00000 0 0 0 657.04190 155.62170 L 601.82514 173.37302 A 87.00000 87.00000 0 0 1 606.00000 200.00000 Z" transform="translate(0,0)" stroke-linejoin="round" fill="#eb3573" stroke="#ffffff" stroke-width="0"></path>
+                                  </g>
+                              </g>
+                          </g>
+                          <g class="dxc-labels-group">
+                              <g class="dxc-labels" opacity="1" transform="translate(0,0)">
+                                  <g visibility="visible">
+                                      <path d="M 573 334 L 584 362 L 585 362" transform="translate(0.5,0.5)" stroke="#1db2f5" stroke-width="1"></path>
+                                      <g transform="translate(593,366)">
+                                      <rect x="-8" y="-17" width="40" height="25" transform="translate(0,0)" fill="#1db2f5" stroke-width="0" stroke="none" isEmpty="false"></rect>
+                                      <text style="white-space:pre;fill:#ffffff;font-family:'Segoe UI', 'Helvetica Neue', 'Trebuchet MS', Verdana, sans-serif;font-weight:400;font-size:12px;cursor:default;" x="0" y="0" transform="translate(0,0)">38%</text>
+                                      </g>
+                                  </g>
+                                  <g visibility="visible">
+                                      <path d="M 375 182 L 351 179 L 345 179" transform="translate(0.5,0.5)" stroke="#f5564a" stroke-width="1"></path>
+                                      <g transform="translate(313,183)">
+                                      <rect x="-8" y="-17" width="40" height="25" transform="translate(0,0)" fill="#f5564a" stroke-width="0" stroke="none" isEmpty="false"></rect>
+                                      <text style="white-space:pre;fill:#ffffff;font-family:'Segoe UI', 'Helvetica Neue', 'Trebuchet MS', Verdana, sans-serif;font-weight:400;font-size:12px;cursor:default;" x="0" y="0" transform="translate(0,0)">29%</text>
+                                      </g>
+                                  </g>
+                                  <g visibility="visible">
+                                      <path d="M 527 55 L 527 38" transform="translate(0.5,0.5)" stroke="#97c95c" stroke-width="1"></path>
+                                      <g transform="translate(515,30)">
+                                      <rect x="-8" y="-17" width="40" height="25" transform="translate(0,0)" fill="#97c95c" stroke-width="0" stroke="none" isEmpty="false"></rect>
+                                      <text style="white-space:pre;fill:#ffffff;font-family:'Segoe UI', 'Helvetica Neue', 'Trebuchet MS', Verdana, sans-serif;font-weight:400;font-size:12px;cursor:default;" x="0" y="0" transform="translate(0,0)">19%</text>
+                                      </g>
+                                  </g>
+                                  <g visibility="visible">
+                                      <path d="M 636 115 L 658 99 L 661 99" transform="translate(0.5,0.5)" stroke="#ffc720" stroke-width="1"></path>
+                                      <g transform="translate(669,103)">
+                                      <rect x="-8" y="-17" width="40" height="25" transform="translate(0,0)" fill="#ffc720" stroke-width="0" stroke="none" isEmpty="false"></rect>
+                                      <text style="white-space:pre;fill:#ffffff;font-family:'Segoe UI', 'Helvetica Neue', 'Trebuchet MS', Verdana, sans-serif;font-weight:400;font-size:12px;cursor:default;" x="0" y="0" transform="translate(0,0)">10%</text>
+                                      </g>
+                                  </g>
+                                  <g visibility="visible">
+                                      <path d="M 662 177 L 688 173 L 692 173" transform="translate(0.5,0.5)" stroke="#eb3573" stroke-width="1"></path>
+                                      <g transform="translate(700,177)">
+                                      <rect x="-8" y="-17" width="33" height="25" transform="translate(0,0)" fill="#eb3573" stroke-width="0" stroke="none" isEmpty="false"></rect>
+                                      <text style="white-space:pre;fill:#ffffff;font-family:'Segoe UI', 'Helvetica Neue', 'Trebuchet MS', Verdana, sans-serif;font-weight:400;font-size:12px;cursor:default;" x="0" y="0" transform="translate(0,0)">5%</text>
+                                      </g>
+                                  </g>
+                              </g>
+                          </g>
+                          <g class="dxc-legend" clip-path="url(#DevExpress_3)" transform="translate(0,0)">
+                              <g transform="translate(1048,10)">
+                                  <g class="dxc-item" style="fill:#767676;font-family:'Segoe UI', 'Helvetica Neue', 'Trebuchet MS', Verdana, sans-serif;font-weight:400;font-size:12px;cursor:default;">
+                                      <g>
+                                      <g class="dxl-marker" transform="translate(0,3)">
+                                          <rect x="0" y="0" width="12" height="12" transform="translate(0,0)" fill="#1db2f5" opacity="1"></rect>
+                                      </g>
+                                      <text style="white-space:pre;" x="0" y="0" transform="translate(19,13)" text-anchor="start">Branch</text>
+                                      </g>
+                                      <g>
+                                      <g class="dxl-marker" transform="translate(0,28)">
+                                          <rect x="0" y="0" width="12" height="12" transform="translate(0,0)" fill="#f5564a" opacity="1"></rect>
+                                      </g>
+                                      <text style="white-space:pre;" x="0" y="0" transform="translate(19,38)" text-anchor="start">Friends/Relatives</text>
+                                      </g>
+                                      <g>
+                                      <g class="dxl-marker" transform="translate(0,53)">
+                                          <rect x="0" y="0" width="12" height="12" transform="translate(0,0)" fill="#97c95c" opacity="1"></rect>
+                                      </g>
+                                      <text style="white-space:pre;" x="0" y="0" transform="translate(20,63)" text-anchor="start">ANB website</text>
+                                      </g>
+                                      <g>
+                                      <g class="dxl-marker" transform="translate(0,78)">
+                                          <rect x="0" y="0" width="12" height="12" transform="translate(0,0)" fill="#ffc720" opacity="1"></rect>
+                                      </g>
+                                      <text style="white-space:pre;" x="0" y="0" transform="translate(19,88)" text-anchor="start">Social Media</text>
+                                      </g>
+                                      <g>
+                                      <g class="dxl-marker" transform="translate(0,103)">
+                                          <rect x="0" y="0" width="12" height="12" transform="translate(0,0)" fill="#eb3573" opacity="1"></rect>
+                                      </g>
+                                      <text style="white-space:pre;" x="0" y="0" transform="translate(20,113)" text-anchor="start">Advertising</text>
+                                      </g>
+                                  </g>
+                              </g>
+                          </g>
+                          </svg>
+                      </div>
+                  </div>
+              </div>
+              </div>
+          </div>
+      </div>
+      <div id="content2" class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12">
+          <div class="MuiPaper-root MuiCard-root jss114 jss102 MuiPaper-elevation1 MuiPaper-rounded">
+              <div class="MuiCardHeader-root">
+              <div class="MuiCardHeader-content"><span class="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock">Q2: Was it easy to access the account opening application page?</span></div>
+              </div>
+              <hr class="MuiDivider-root">
+              <div class="MuiCardContent-root jss116">
+              <div class="jss117">
+                  <div class="jss142">
+                      <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3">
+                          <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4">
+                          <div class="MuiBox-root jss145">
+                              <h2 class="MuiTypography-root MuiTypography-h2">86%</h2>
+                              <div class="MuiBox-root jss146"></div>
+                              <p class="MuiTypography-root MuiTypography-body1">21 total</p>
+                              <span class="MuiTypography-root jss147 MuiTypography-overline" style="background-color: rgb(117, 117, 117); color: rgb(255, 255, 255);">FCR</span>
+                          </div>
+                          </div>
+                          <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8">
+                          <div class="MuiBox-root jss149">
+                              <table class="jss151">
+                                  <tbody>
+                                      <tr>
+                                      <td class="jss152">
+                                          <span class="jss153"> Yes </span> 
+                                          <svg class="MuiSvgIcon-root jss154" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
+                                              <path d="M16.59 7.58L10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"></path>
+                                          </svg>
+                                      </td>
+                                      <td>
+                                          <div style="background-color: rgb(102, 187, 106); width: 100%; height: auto;"><span class="jss153">18</span></div>
+                                      </td>
+                                      </tr>
+                                      <tr>
+                                      <td class="jss152">
+                                          <span class="jss153"> No </span> 
+                                          <svg class="MuiSvgIcon-root jss154" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
+                                              <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8 0-1.85.63-3.55 1.69-4.9L16.9 18.31C15.55 19.37 13.85 20 12 20zm6.31-3.1L7.1 5.69C8.45 4.63 10.15 4 12 4c4.42 0 8 3.58 8 8 0 1.85-.63 3.55-1.69 4.9z"></path>
+                                          </svg>
+                                      </td>
+                                      <td>
+                                          <div style="background-color: rgb(239, 83, 80); width: 16.6667%; height: auto;"><span class="jss153">3</span></div>
+                                      </td>
+                                      </tr>
+                                  </tbody>
+                              </table>
+                          </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              </div>
+          </div>
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
